Sun Aug 23 11:21:40 BST 2009  Colin Watson  <cjwatson@debian.org>

	* Makefile.am (EXTRA_DIST): Distribute gnulib/lib/xmalloc.patch.

Sun Aug 23 11:15:53 BST 2009  Colin Watson  <cjwatson@debian.org>

	* docs/man-db.lsm (Keywords): Add accessdb and lexgrog.

Sun Aug 23 11:14:04 BST 2009  Colin Watson  <cjwatson@debian.org>

	* docs/INSTALL.autoconf: Update to instructions from Autoconf 2.64.

Sun Aug 23 11:11:02 BST 2009  Colin Watson  <cjwatson@debian.org>

	* m4/man-bdb.m4: Bump serial, forgotten in most recent change.

Sun Aug 23 11:07:26 BST 2009  Colin Watson  <cjwatson@debian.org>

	* lib/README: Update.

Sun Aug 23 10:56:50 BST 2009  Colin Watson  <cjwatson@debian.org>

	* docs/TODO: Remove entry about the other 'man' package; 'man -K'
	  was the last major missing feature relative to it.
	* docs/HACKING (Testing): Document new test suite.

Sun Aug 23 10:51:33 BST 2009  Colin Watson  <cjwatson@debian.org>

	* tools/README: Don't bother describing files installed here by the
	  autotools.

Sun Aug 23 10:47:16 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/README.zsoelim: Remove, merging text into ...
	* src/zsoelim.l: ... here.
	* src/Makefile.am (EXTRA_DIST): Remove README.zsoelim.

Sun Aug 23 10:36:28 BST 2009  Colin Watson  <cjwatson@debian.org>

	Remove the old set-id wrapper, which hasn't been recommended for
	several years now.

	* src/wrapper.c: Remove.
	* src/Makefile.am (noinst_PROGRAMS, wrapper_LDADD, wrapper_SOURCES):
	  Remove.

Sun Aug 23 10:26:32 BST 2009  Colin Watson  <cjwatson@debian.org>

	* README: Various minor updates.

Sun Aug 23 00:13:56 BST 2009  Colin Watson  <cjwatson@debian.org>

	* manual/Makefile.am (noinst_DATA): Move $(MANUAL).dvi to ...
	  (CLEANFILES): ... here.
	  (install-data-hook): Stop installing the DVI version of the manual
	  by default.

Sun Aug 23 00:07:03 BST 2009  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Add --enable-automatic-create,
	  --disable-automatic-update, and --disable-cats options.