@@ -1,3 +1,7 @@
+Sun Aug 23 11:25:50 BST 2009  Colin Watson  <cjwatson@debian.org>
+
+	* Makefile.am (EXTRA_DIST): Distribute gnulib/m4/gnulib-tool.m4.
+
 Sun Aug 23 11:21:40 BST 2009  Colin Watson  <cjwatson@debian.org>
 
 	* Makefile.am (EXTRA_DIST): Distribute gnulib/lib/xmalloc.patch.
